deploy/storybook-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: welfdapp-storybook-service
 namespace: welfdapp-storybook
 labels:
   app: welfdapp-storybook
spec:
 type: NodePort
 selector:
   app: welfdapp-storybook
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
   name: http
